# VERTEX-CFD

./: .gitattributes  CMakeLists.txt  README.md  _config.yml  index.md  paper.bib  paper.md
docs/: index.md  (+3 more)
examples/: CMakeLists.txt  README.md
examples/inputs/: simple_box_2d.xml  simple_box_3d.xml
examples/mesh/: test_mesh_manager.exo
examples/post_processing/: lambda-2-contour.py
src/: CMakeLists.txt
src/boundary_conditions/: VertexCFD_BCStrategy_BoundaryFluxBase.cpp  VertexCFD_BCStrategy_BoundaryFluxBase.hpp  VertexCFD_BCStrategy_BoundaryFluxBase_impl.hpp  VertexCFD_BCStrategy_Factory.hpp  VertexCFD_BCStrategy_IncompressibleBoundaryFlux.cpp  VertexCFD_BCStrategy_IncompressibleBoundaryFlux.hpp  VertexCFD_BCStrategy_IncompressibleBoundaryFlux_impl.hpp  VertexCFD_BCStrategy_StrongDirichletMMS.hpp  VertexCFD_BCStrategy_StrongDirichletMMS_impl.hpp  VertexCFD_BoundaryState_MethodManufacturedSolution.cpp  VertexCFD_BoundaryState_MethodManufacturedSolution.hpp  VertexCFD_BoundaryState_MethodManufacturedSolution_impl.hpp  VertexCFD_BoundaryState_ViscousGradient.cpp  VertexCFD_BoundaryState_ViscousGradient.hpp  VertexCFD_BoundaryState_ViscousGradient_impl.hpp  VertexCFD_BoundaryState_ViscousPenaltyParameter.cpp  VertexCFD_BoundaryState_ViscousPenaltyParameter.hpp  VertexCFD_BoundaryState_ViscousPenaltyParameter_impl.hpp  VertexCFD_Integrator_BoundaryGradBasisDotVector.cpp  VertexCFD_Integrator_BoundaryGradBasisDotVector.hpp  VertexCFD_Integrator_BoundaryGradBasisDotVector_impl.hpp
src/closure_models/: VertexCFD_ClosureModelFactory.cpp  VertexCFD_ClosureModelFactory.hpp  VertexCFD_ClosureModelFactory_Hessian2d.cpp  VertexCFD_ClosureModelFactory_Hessian3d.cpp  VertexCFD_ClosureModelFactory_Jacobian2d.cpp  VertexCFD_ClosureModelFactory_Jacobian3d.cpp  VertexCFD_ClosureModelFactory_Residual2d.cpp  VertexCFD_ClosureModelFactory_Residual3d.cpp  VertexCFD_ClosureModelFactory_Tangent2d.cpp  VertexCFD_ClosureModelFactory_Tangent3d.cpp  VertexCFD_ClosureModelFactory_TemplateBuilder.hpp  VertexCFD_ClosureModelFactory_impl.hpp  VertexCFD_Closure_ConstantScalarField.cpp  VertexCFD_Closure_ConstantScalarField.hpp  VertexCFD_Closure_ConstantScalarField_impl.hpp  VertexCFD_Closure_ElementLength.cpp  VertexCFD_Closure_ElementLength.hpp  VertexCFD_Closure_ElementLength_impl.hpp  VertexCFD_Closure_ExternalFields.cpp  VertexCFD_Closure_ExternalFields.hpp  VertexCFD_Closure_ExternalFields_impl.hpp  VertexCFD_Closure_ExternalMagneticField.cpp  VertexCFD_Closure_ExternalMagneticField.hpp  VertexCFD_Closure_ExternalMagneticField_impl.hpp  VertexCFD_Closure_MeasureElementLength.cpp  VertexCFD_Closure_MeasureElementLength.hpp  VertexCFD_Closure_MeasureElementLength_impl.hpp  VertexCFD_Closure_MethodManufacturedSolution.cpp  VertexCFD_Closure_MethodManufacturedSolution.hpp  VertexCFD_Closure_MethodManufacturedSolutionSource.hpp  VertexCFD_Closure_MethodManufacturedSolutionSource_Hessian.cpp  VertexCFD_Closure_MethodManufacturedSolutionSource_Jacobian.cpp  VertexCFD_Closure_MethodManufacturedSolutionSource_Residual.cpp  VertexCFD_Closure_MethodManufacturedSolutionSource_Tangent.cpp  VertexCFD_Closure_MethodManufacturedSolutionSource_impl.hpp  VertexCFD_Closure_MethodManufacturedSolution_impl.hpp  VertexCFD_Closure_MetricTensor.cpp  VertexCFD_Closure_MetricTensor.hpp  VertexCFD_Closure_MetricTensorElementLength.cpp  VertexCFD_Closure_MetricTensorElementLength.hpp  (+11 more)
src/drivers/: VertexCFD_ExternalFieldsManager.hpp  VertexCFD_ExternalFieldsManager_impl.hpp  VertexCFD_InitialConditionManager.cpp  VertexCFD_InitialConditionManager.hpp  VertexCFD_MeshManager.cpp  VertexCFD_MeshManager.hpp  VertexCFD_PhysicsManager.cpp  VertexCFD_PhysicsManager.hpp  vertexcfd.cpp
src/equation_sets/: VertexCFD_EquationSet_Factory.hpp  VertexCFD_EquationSet_Heat.cpp  VertexCFD_EquationSet_Heat.hpp  VertexCFD_EquationSet_Heat_impl.hpp  VertexCFD_EquationSet_IncompressibleNavierStokes.cpp  VertexCFD_EquationSet_IncompressibleNavierStokes.hpp  VertexCFD_EquationSet_IncompressibleNavierStokes_impl.hpp
src/initial_conditions/: VertexCFD_InitialConditionFactory.cpp  VertexCFD_InitialConditionFactory.hpp  VertexCFD_InitialConditionFactory_TemplateBuilder.hpp  VertexCFD_InitialConditionFactory_impl.hpp  VertexCFD_InitialCondition_Circle.cpp  VertexCFD_InitialCondition_Circle.hpp  VertexCFD_InitialCondition_Circle_impl.hpp  VertexCFD_InitialCondition_Constant.cpp  VertexCFD_InitialCondition_Constant.hpp  VertexCFD_InitialCondition_Constant_impl.hpp  VertexCFD_InitialCondition_Gaussian.cpp  VertexCFD_InitialCondition_Gaussian.hpp  VertexCFD_InitialCondition_Gaussian_impl.hpp  VertexCFD_InitialCondition_InverseGaussian.cpp  VertexCFD_InitialCondition_InverseGaussian.hpp  VertexCFD_InitialCondition_InverseGaussian_impl.hpp  VertexCFD_InitialCondition_MethodManufacturedSolution.cpp  VertexCFD_InitialCondition_MethodManufacturedSolution.hpp  VertexCFD_InitialCondition_MethodManufacturedSolution_impl.hpp  VertexCFD_InitialCondition_Step.cpp  VertexCFD_InitialCondition_Step.hpp  VertexCFD_InitialCondition_Step_impl.hpp
src/linear_solvers/: VertexCFD_LinearSolvers_CusolverGLU.cpp  VertexCFD_LinearSolvers_CusolverGLU.hpp  VertexCFD_LinearSolvers_CusolverNonpublic.hpp  VertexCFD_LinearSolvers_Hypre.cpp  VertexCFD_LinearSolvers_Hypre.hpp  VertexCFD_LinearSolvers_HyprePreconditionerFactory.cpp  VertexCFD_LinearSolvers_HyprePreconditionerFactory.hpp  VertexCFD_LinearSolvers_LOWSFactoryBuilder.cpp  VertexCFD_LinearSolvers_LOWSFactoryBuilder.hpp  VertexCFD_LinearSolvers_LocalDirectSolver.hpp  VertexCFD_LinearSolvers_LocalSolverFactory.cpp  VertexCFD_LinearSolvers_LocalSolverFactory.hpp  VertexCFD_LinearSolvers_Preconditioner.cpp  VertexCFD_LinearSolvers_Preconditioner.hpp  VertexCFD_LinearSolvers_PreconditionerFactory.cpp  VertexCFD_LinearSolvers_PreconditionerFactory.hpp  VertexCFD_LinearSolvers_SuperLU.cpp  VertexCFD_LinearSolvers_SuperLU.hpp
src/mesh/: VertexCFD_Mesh_ExodusWriter.cpp  VertexCFD_Mesh_ExodusWriter.hpp  VertexCFD_Mesh_GeometryData.hpp  VertexCFD_Mesh_GeometryPrimitives.hpp  VertexCFD_Mesh_Restart.cpp  VertexCFD_Mesh_Restart.hpp  (+2 more)
(+650 files in other folders)
